fixed the gap for projects

--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -23,18 +23,19 @@
 .mywork-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 40px;
+    gap: 60px;
     transition: all 0.4s ease; /* Add smooth transition */
 }
 .mywork-container img{
     box-sizing: border-box;
+   
     width: 419px;
     height: 280px;
     border-radius: 20px;
     cursor: pointer;
 }
 .mywork-container img:hover{
-    transform: scale(1.10);
+    transform: scale(1.10); 
     border: 3px solid #ff00ff;
     transition: 0.3s;
     border-radius: 20px; 
@@ -92,6 +93,7 @@
     }
     .mywork-container{
         grid-template-columns: 1fr 1fr;
+        gap: 40px;
     }
     .mywork-container img{
         width: 100%;
